# rust-issue-stats

./: Cargo.toml  README.md  issues_query.graphql  timeline_query.graphql
persisted-data-dir/: page-1_page-size-10  page-2_page-size-10
scripts/: run-ci-locally.sh
src/: lib.rs  models.rs  queries.rs
