[package]
name = "rust-issue-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
serde = "1.0.190"
serde_json = "1.0.107"
tracing = "0.1.40"
graphql_client = "0.13.0"

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["env-filter", "fmt"]

[dependencies.octocrab]
version = "0.31.2"
default-features = false
features = ["rustls"]

[dependencies.clap]
version = "4.4.7"
features = ["derive", "wrap_help"]

[dependencies.tokio]
version = "1.29.1"
default-features = false
features = ["macros", "rt-multi-thread"]
